docs: describe how to manage embedded plugin registry for VS Code editor (#2503)
Signed-off-by: Valerii Svydenko <vsvydenk@redhat.com>
Co-authored-by: Nick Boldt <nboldt@redhat.com>
Co-authored-by: Max Leonov <mleonov@redhat.com>
Co-authored-by: Mario Loriedo <mario.loriedo@gmail.com>

--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -7,12 +7,12 @@
 [id="extensions-for-microsoft-visual-studio-code-open-source"]
 = Extensions for Microsoft Visual Studio Code - Open Source
 
-A paragraph or more of conceptual information about the embedded link:https://open-vsx.org/[Open VSX Registry] that Che admins need to understand.
+To manage extensions, the link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source IDE] cloud editors use one of these link:https://open-vsx.org/about[Open VSX] registries:
 
-Explain the process and UX implications for Che end-users.
+* The public, primary link:https://open-vsx.org[open-vsx.org] registry.
+* The embedded instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments. The embedded Open VSX registry contains only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org]. This subset can be customized.
+* A standalone Open VSX registry instance, deployed on a network accessible from {prod-short} workspace pods.
 
-include::partial$proc_importing-extensions-from-the-open-vsx-registry.adoc[leveloffset=+1]
+include::partial$proc_selecting-an-open-vsx-registry-instance.adoc[leveloffset=+1]
 
-include::partial$proc_importing-extensions-that-are-not-in-the-open-vsx-registry.adoc[leveloffset=+1]
-
-include::partial$proc_removing-extensions-from-the-embedded-open-vsx-registry.adoc[leveloffset=+1]
+include::partial$proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc[leveloffset=+1]
