--- a/modules/administration-guide/pages/managing-ide-extensions.adoc
+++ b/modules/administration-guide/pages/managing-ide-extensions.adoc
@@ -7,8 +7,6 @@
 [id="managing-ide-extensions"]
 = Managing IDE extensions
 
-A paragraph or more of an explanation of how managing IDE extensions/plugins is different when using Che compared to installing extensions for locally installed IDEs.
-
-Mention both: "extensions or plugins"
+IDEs use extensions or plugins to extend their functionality, and the mechanism for managing extensions differs between IDEs.
 
 * xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
