--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -3,7 +3,7 @@
 [id="adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance"]
 = Adding or removing pass:[<!-- vale RedHat.Spelling = NO -->] pass:[<!-- vale RedHat.Spelling = NO -->] VS Code pass:[<!-- vale RedHat.Spelling = YES -->] pass:[<!-- vale RedHat.Spelling = YES -->] extensions in the embedded Open VSX registry instance
 
-You can add or remove your choice of pass:[<!-- vale RedHat.Spelling = NO -->] pass:[<!-- vale RedHat.Spelling = NO -->] VS Code pass:[<!-- vale RedHat.Spelling = YES -->] pass:[<!-- vale RedHat.Spelling = YES -->] extensions in the embedded Open VSX registry instance that is deployed by {prod-short} to support air-gapped, offline, and proxy-restricted environments.
+You can add or remove extensions in the embedded Open VSX registry instance deployed by {prod-short} to support offline and proxied environments.
 
 This will create a custom build of the Open VSX registry, which can be used in your organization’s workspaces. 
 
@@ -37,7 +37,7 @@ The latest extension version on link:https://open-vsx.org[open-vsx.org] is the d
 ====
 * If the extension publisher is unavailable or unwilling to publish the extension to link:https://open-vsx.org[open-vsx.org], and if there is no Open VSX equivalent of the extension, consider link:https://github.com/open-vsx/publish-extensions/issues[reporting an issue] to the Open VSX team.
 
-* If you have a closed-source extension or an extension developed only for internal use in your company, you can add the extension directly from a `.vsix` file that is accessible from a URL while building the plugin registry container:
+* If you have a closed-source extension or an extension developed only for internal use in your company, you can add the extension directly from a `.vsix`file by using a URL accessible to your custom plugin registry container build:
 +
 [source,json,subs="+quotes"]
 ----
