--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -3,7 +3,7 @@
 [id="selecting-an-open-vsx-registry-instance"]
 = Selecting an Open VSX registry instance
 
-The Open VSX registry at `pass:c,a,q[https://open-vsx.org]` is the default if it is resolved from within your cluster. If not, then the embedded Open VSX registry within the {prod-short} `plugin-registry` pod is the default.
+The Open VSX registry at `pass:c,a,q[https://open-vsx.org]` is the default if resolved from within your cluster. If not, then the embedded Open VSX registry within the {prod-short} `plugin-registry` pod is the default.
 
 If the default Open VSX registry instance is not what you need, you can select another Open VSX registry instance:
 
@@ -25,5 +25,5 @@ spec:
  
 * To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. See the next section for how to customize the included extensions.
 
-* You can point `openVSXURL` at the URL of a standalone Open VSX registry instance. 
+* You can also point `openVSXURL` at the URL of a standalone Open VSX registry instance, if its URL is accessible from within your cluster and not blocked by a proxy. 
 ====
