--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -25,5 +25,5 @@ spec:
  
 * To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. See the next section for how to customize the included extensions.
 
-* You can also point `openVSXURL` at the URL of a standalone Open VSX registry instance, if its URL is accessible from within your cluster and not blocked by a proxy. 
+* You can also point `openVSXURL` at the URL of a standalone Open VSX registry instance if its URL is accessible from within your cluster and not blocked by a proxy. 
 ====
