--- a/modules/end-user-guide/partials/proc_removing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_removing-workspaces.adoc
@@ -4,9 +4,14 @@
 
 Removing a workspace only requires deleting the `DevWorkspace` custom resource.
 
-Deleting the `DevWorkspace` custom resource will also delete other workspace resources if they were created by {prod-short} such as the referenced `DevWorkspaceTemplate` and per-workspace `PersistentVolumeClaims`.
+TIP: Remove workspaces by using the {prod-short} dashboard whenever possible.
 
+WARNING: Deleting the `DevWorkspace` custom resource will also delete other workspace resources if they were created by {prod-short} such as the referenced `DevWorkspaceTemplate` and per-workspace `PersistentVolumeClaims`.
+
+.Procedure
+
+* To remove a workspace, run the following command
 [source,subs="+attributes"]
 ----
-$ {orch-cli} delete devworkspace NAME -n NAMESPACE
+$ {orch-cli} delete devworkspace __<workspace_name>__ -n __<user_namespace>__
 ----
