--- a/modules/administration-guide/pages/plug-in-registry.adoc
+++ b/modules/administration-guide/pages/plug-in-registry.adoc
@@ -4,8 +4,8 @@
 :navtitle: Plug-in registry
 :page-aliases:
 
-[id="plug-in-registry"]
-= Plug-in registry
+[id="plugin-registry"]
+= Plugin registry
 
 Each {prod-short} workspace starts with a specific editor and set of associated extensions.
 The {prod-short} plug-in registry provides the list of available editors and editor extensions. 
@@ -13,11 +13,11 @@ A Devfile v2 describes each editor or extension.
 
 The xref:dashboard.adoc[] is reading the content of the registry.
 
-.Plug-in registries interactions with other components
-image::architecture/{project-context}-plugin-registry-interactions.png[Plug-in registries interactions with other components]
+.Plugin registries interactions with other components
+image::architecture/{project-context}-plugin-registry-interactions.png[Plugin registries interactions with other components]
 
 .Additional resources
 
-* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[Editors definitions in the {prod-short} plug-in registry repository]
-* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-theia-plugins.yaml[Plug-ins definitions in the {prod-short} plug-in registry repository]
-* link:https://eclipse-che.github.io/che-plugin-registry/main/index.json[Plug-in registry latest community version online instance]
+* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[Editor definitions in the {prod-short} plugin registry repository]
+* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-theia-plugins.yaml[Plugin definitions in the {prod-short} plugin registry repository]
+* link:https://eclipse-che.github.io/che-plugin-registry/main/index.json[Plugin registry latest community version online instance]
