--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -84,4 +84,4 @@ spec:
 
 . Check that the `plugin-registry` pod has restarted and is running.
 
-. Restart the workspace and check the available extensions in the *Extensions* view of the Microsoft Visual Studio Code - Open Source in the workspace.
+. Restart the workspace and check the available extensions in the *Extensions* view of the workspace IDE.
