--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -21,7 +21,7 @@ spec:
 
 ----
 <1> Sets the maximum number of simultaneously running workspaces per user.
-The value, `-1`, allows users to run an unlimited number of workspaces.
+The `-1` value enables users to run an unlimited number of workspaces.
 The default value is `1`.
 
 .Procedure
