--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -14,12 +14,11 @@ This configuration is part of the `CheCluster` Custom Resource:
 [source,yaml,subs="+quotes"]
 ----
 spec:
-  components:
-    cheServer:
-      extraProperties:
-        CHE_LIMITS_USER_WORKSPACES_COUNT: "__<kept_workspaces_limit>__" # <1>
+  devEnvironments:
+    maxNumberOfWorkspacesPerUser: __<kept_workspaces_limit>__#<1>
 ----
-<1> Sets the maximum number of workspaces per user. The default value, `-1`, allows users to keep an unlimited number of workspaces. Use a positive integer to set the maximum number of workspaces per user.
+<1> Sets the maximum number of workspaces per user.
+The default value, `-1`, allows users to keep an unlimited number of workspaces. Use a positive integer to set the maximum number of workspaces per user.
 
 .Procedure
 
@@ -31,13 +30,13 @@ $ {orch-cli} get checluster --all-namespaces \
   -o=jsonpath="{.items[*].metadata.namespace}"
 ----
 
-. Configure the `CHE_LIMITS_USER_WORKSPACES_COUNT`:
+. Configure the `maxNumberOfWorkspacesPerUser`:
 +
 [source,subs="+quotes,attributes"]
 ----
-$ {orch-cli} patch checluster/{context} -n {prod-namespace} \# <1>
+$ {orch-cli} patch checluster/{context} -n {prod-namespace} \#<1>
 --type='merge' -p \
-'{"spec":{"components":{"cheServer":{"extraProperties":{"CHE_LIMITS_USER_WORKSPACES_COUNT": "__<kept_workspaces_limit>__"}}}}}' # <2>
+'{"spec":{"devEnvironments":{"maxNumberOfWorkspacesPerUser": __<kept_workspaces_limit>__}}}'#<2>
 ----
 <1> The {prod-short} namespace that you got in step 1.
 <2> Your choice of the `__<kept_workspaces_limit>__` value.
