--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -5,7 +5,7 @@
 
 The Open VSX registry at `pass:c,a,q[https://open-vsx.org]` is the default if resolved from within your cluster. If not, then the embedded Open VSX registry within the {prod-short} `plugin-registry` pod is the default.
 
-If the default Open VSX registry instance is not what you need, you can select another Open VSX registry instance:
+If the default Open VSX registry instance is not what you need, you can select another Open VSX registry instance as follows.
 
 .Procedure
 
