--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -69,7 +69,7 @@ $ ./build.sh -o __<username>__ -r quay.io -t custom
 $ {docker-cli} push quay.io/__<username/plugin_registry:custom>__
 ----
 
-. Edit the `CheCluster` custom resource in the cluster to point to the image (for example, on link:https://quay.io/[quay.io]) and then save the changes:
+. Edit the `CheCluster` custom resource in your organization's cluster to point to the image (for example, on link:https://quay.io/[quay.io]) and then save the changes:
 +
 [source,yaml,subs="+quotes"]
 ----
