Apply suggestions from code review

--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
 
-[id="adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance"]
-= Adding or removing pass:[<!-- vale RedHat.Spelling = NO -->] pass:[<!-- vale RedHat.Spelling = NO -->] VS Code pass:[<!-- vale RedHat.Spelling = YES -->] pass:[<!-- vale RedHat.Spelling = YES -->] extensions in the embedded Open VSX registry instance
+[id="adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance"]
+= Adding or removing extensions in the embedded Open VSX registry instance
 
 You can add or remove extensions in the embedded Open VSX registry instance deployed by {prod-short} to support offline and proxied environments.
 
