--- a/modules/end-user-guide/partials/proc_starting-stopped-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_starting-stopped-workspaces.adoc
@@ -2,14 +2,16 @@
 [id="starting-stopped-workspaces"]
 = Starting stopped workspaces
 
-A stopped workspace can be started by setting the `Devworkspace` 's `spec.started` field to `true`.
+You can start a stopped workspace by setting the `spec.started` field in the `Devworkspace` to `true`.
 
-To use the `wait` command to wait for the status change, a minimum version of `1.23` for `kubectl`, or a minimum version of `4.10` for `oc` is required.
+.Procedure
 
-After determining the `NAME` and `NAMESPACE` of the workspace to start, run:
+. Get the `__<workspace_name>__` of the stopped workspace and the `__<user_namespace>__`.
 
+. Run the following command to start the stopped workspace:
++
 [source,subs="+attributes"]
 ----
-$ {orch-cli} patch devworkspace NAME -p '{"spec":{"started":true}}' --type=merge -n NAMESPACE && \
-        {orch-cli} wait --for=jsonpath='{.status.phase}'=Running dw/NAME -n NAMESPACE
+$ {orch-cli} patch devworkspace __<workspace_name>__ -p '{"spec":{"started":true}}' --type=merge -n __<user_namespace>__ && \
+        {orch-cli} wait --for=jsonpath='{.status.phase}'=Running dw/__<workspace_name>__ -n __<user_namespace>__
 ----
