docs: describe how to manage embedded plugin registry for VS Code editor (#2539)
* outline and files ready for the SME

* Update modules/administration-guide/pages/managing-ide-extensions.adoc

* Update modules/administration-guide/pages/managing-ide-extensions.adoc

* Update modules/administration-guide/pages/managing-ide-extensions.adoc

* docs: describe how to manage embedded plugin registry for VS Code editor (#2503)

Signed-off-by: Valerii Svydenko <vsvydenk@redhat.com>
Co-authored-by: Nick Boldt <nboldt@redhat.com>
Co-authored-by: Max Leonov <mleonov@redhat.com>
Co-authored-by: Mario Loriedo <mario.loriedo@gmail.com>

* Update modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc

Co-authored-by: Nick Boldt <nboldt@redhat.com>

Update modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc

Co-authored-by: Nick Boldt <nboldt@redhat.com>

Update modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc

Update modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc

* Update modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc

* Update modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc

* Update modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc

* Update modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc

* Update modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc

* Update modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc

* Update modules/administration-guide/parti

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -71,6 +71,8 @@
 **** xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[]
 *** xref:configuring-the-administrative-user.adoc[]
 *** xref:removing-user-data.adoc[]
+* xref:managing-ide-extensions.adoc[]
+** xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
 * xref:upgrading-che.adoc[]
 ** xref:upgrading-the-chectl-management-tool.adoc[]
