--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -152,7 +152,7 @@ components:
 +
 TIP: For more details, see the link:https://devfile.io/docs/2.1.0/what-is-a-devfile[devfile v2 documentation].
 
-. Create a `DevWorkspace` custom resource definition that incorporates the copied devfile contents from the previous step.
+. Create a `DevWorkspace` custom resource definition, pasting the devfile contents from the previous step under the `spec.template` field.
 +
 .A `DevWorkspace` custom resource definition
 ====
