--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -141,7 +141,7 @@ TIP: For more details, see the link:https://devfile.io/docs/2.1.0/what-is-a-devf
 
 . Create a `DevWorkspace` custom resource, pasting the devfile contents from the previous step under the `spec.template` field.
 +
-.A `DevWorkspace` custom resource definition
+.A `DevWorkspace` custom resource
 ====
 [source,yaml,subs="+quotes,+attributes"]
 ----
