--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -9,12 +9,14 @@ If your use case does not permit use of the {prod-short} dashboard, you can crea
 
 Using the {prod-short} dashboard is the default way to create workspaces because {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster with the following configuration benefits:
 
+* User is already logged into the cluster when accessing the {prod-short} dashboard, allowing workspace resources to be created and accessed in the user's {orch-namespace}
 * Recognition of configurations in `spec.devEnvironments` specified in the `CheCluster` custom resource including:
 ** Persistent storage strategy specified with `devEnvironments.storage`
 ** Default IDE specified with `devEnvironments.defaultEditor`
 ** Default plugins specified with `devEnvironments.defaultPlugins`
 ** Container build configuration specified with `devEnvironments.containerBuildConfiguration`
 * Recognition of the `DevWorkspaceOperatorConfig` configuration managed by {prod-short}
+* Secures workspace access by default, using the `routingClass: che` in the workspace's `DevWorkspace`.
 
 ====
 
@@ -176,7 +178,7 @@ spec:
 <7> List of components such as workspace containers and volume components.
 ====
 
-. Apply the `DevWorkspace` custom resource to the cluster. 
+. Apply the `DevWorkspace` custom resource to the cluster.
 
 . Verify that the workspace is starting by checking the *PHASE* status of the `DevWorkspace`.
 +
