name to lowercase (otherwise the devworkspace cannot be created)
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -155,7 +155,7 @@ metadata:
 spec:
   started: true#<3>
   contributions:#<4>
-    - name: IDE
+    - name: ide
       kubernetes:
         name: che-code#<5>
   template:
