--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -153,6 +153,7 @@ metadata:
   name: my-devworkspace#<1>
   namespace: user1-dev#<2>
 spec:
+  routingClass: che
   started: true#<3>
   contributions:#<4>
     - name: ide
