--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -9,7 +9,7 @@ If your use case does not permit use of the {prod-short} dashboard, you can crea
 
 Using the {prod-short} dashboard is the default way to create workspaces because {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster with the following configuration benefits:
 
-* User is already logged into the cluster when accessing the {prod-short} dashboard, allowing workspace resources to be created and accessed in the user's {orch-namespace}
+* The developer is automatically logged into the {orch-name} cluster
 * Recognition of configurations in `spec.devEnvironments` specified in the `CheCluster` custom resource including:
 ** Persistent storage strategy specified with `devEnvironments.storage`
 ** Default IDE specified with `devEnvironments.defaultEditor`
