--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -7,7 +7,7 @@ If your use case does not permit use of the {prod-short} dashboard, you can crea
 [NOTE]
 ====
 
-Using the {prod-short} dashboard is the default way to create workspaces because {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster with the following configuration benefits:
+Creating new workspaces through the {prod-short} dashboard provides better user experience and configuration benefits compared to using the command line:
 
 * The developer is automatically logged into the {orch-name} cluster
 * Secures workspace access by default, using the `routingClass: che` in the workspace's `DevWorkspace`
