--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -9,7 +9,9 @@ If your use case does not permit use of the {prod-short} dashboard, you can crea
 
 Creating new workspaces through the {prod-short} dashboard provides better user experience and configuration benefits compared to using the command line:
 
-* The developer is automatically logged into the {orch-name} cluster
+* As a user, you are automatically logged in to the {orch-name} cluster.
+* {platforms-name} clients work automatically.
+* {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster.
 * Secures workspace access by default, using the `routingClass: che` in the workspace's `DevWorkspace`
 * Recognition of configurations in `spec.devEnvironments` specified in the `CheCluster` custom resource including:
 ** Persistent storage strategy specified with `devEnvironments.storage`
