--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -12,7 +12,7 @@ Creating new workspaces through the {prod-short} dashboard provides better user 
 * As a user, you are automatically logged in to the {orch-name} cluster.
 * {platforms-name} clients work automatically.
 * {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster.
-* Secures workspace access by default, using the `routingClass: che` in the workspace's `DevWorkspace`
+* Access to the workspace is secured by default with the `routingClass: che` in the `DevWorkspace` of the workspace.
 * Recognition of configurations in `spec.devEnvironments` specified in the `CheCluster` custom resource including:
 ** Persistent storage strategy specified with `devEnvironments.storage`
 ** Default IDE specified with `devEnvironments.defaultEditor`
