PR feedback update
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -180,6 +180,17 @@ spec:
 <6> Details about the Git repository to clone into the workspace when it starts.
 <7> List of components such as workspace containers and volume components.
 ====
++
+[TIP]
+====
+Instead of creating a `DevWorkspaceTemplate` and referencing it in the `spec.contributions` field of the `DevWorkspace`, if the `DevWorkspaceTemplate` is hosted online, you can reference it using a URL.
+[source,subs="+quotes,+attributes,+macros"]
+----
+  contributions:
+    - name: ide
+      uri: __<url_to_devworkspace_template>__
+----
+====
 
 . Apply the `DevWorkspace` custom resource to the cluster.
 
