rebase on upstream/main

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -22,7 +22,7 @@
 ** xref:selecting-an-in-browser-ide-for-one-new-workspace.adoc[]
 ** xref:selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
-** xref:using-git-credentials.adoc[]
+** xref:using-a-git-provider-access-token.adoc[]
 ** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
 *** xref:enabling-maven-artifact-repositories.adoc[]
 *** xref:enabling-gradle-artifact-repositories.adoc[]
