Apply suggestions from code review

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -65,11 +65,11 @@ metadata:
     app.kubernetes.io/component: scm-personal-access-token
     app.kubernetes.io/part-of: che.eclipse.org
   annotations:
-    che.eclipse.org/che-userid: _<{prod-id-short}_user_ID>_# <1>
+    che.eclipse.org/che-userid: __<{prod-id-short}_user_id>__# <1>
     che.eclipse.org/scm-personal-access-token-name: _<git_provider_name>_# <2>
-    che.eclipse.org/scm-url: _<Git_provider_endpoint># <3>
-    che.eclipse.org/scm-userid: '_<Git_provider_user_ID>_'# <4>
-    che.eclipse.org/scm-username: _<Git_provider_username>_
+    che.eclipse.org/scm-url: __<git_provider_endpoint>__# <3>
+    che.eclipse.org/scm-userid: '__<git_provider_user_id>__'# <4>
+    che.eclipse.org/scm-username: __<git_provider_username>__
 data:
   token: __<Base64_encoded_access_token>__
 type: Opaque
