--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -173,7 +173,7 @@ spec:
         container:
           image: quay.io/devfile/universal-developer-image:ubi8-latest
 ----
-<1> Name of the `DevWorkspace` custom resource. This is will be the name of the new workspace.
+<1> Name of the `DevWorkspace` custom resource. This will be the name of the new workspace.
 <2> User namespace, which is the target {orch-namespace} for the new workspace.
 <3> Determines whether the workspace must be started when the `DevWorkspace` custom resource is created.
 <4> Reference to the `DevWorkspaceTemplate` custom resource of the selected IDE.
