procedures: rewrite User Guide: Using a Git provider access token (#2509)
* swap the order of two sections in Using Git credentials

* rebase on upstream/main

* saving work in progress

* fix: fix xrefs and in-line referencing text

* rearrange files in nav.adoc

* reorder the sections

* fix the che fqdn link rendering

* tested and edited the section 'Using a Git-provider access token'

* minor overlooked fixes

* last-minute fixes

* add an xref

* Update modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc

Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

* Update modules/end-user-guide/pages/using-a-git-provider-access-token.adoc

Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

* Update modules/end-user-guide/pages/using-a-git-provider-access-token.adoc

Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

* Update modules/end-user-guide/pages/using-a-git-provider-access-token.adoc

Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

* Update modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc

* Apply suggestions from code review

* Update modules/end-user-guide/pages/using-a-git-provider-access-token.adoc

Co-authored-by: Rolfe Dlugy-Hegwer <rolfedh@users.noreply.github.com>

--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -9,12 +9,12 @@
 
 In a workspace, you can run Git commands that require user authentication like cloning a remote private Git repository or pushing to a remote public or private Git repository.
 
-User authentication to a Git server from a workspace can be configured by the administrator or user:
+User authentication to a Git server from a workspace is configured by the administrator or, in some cases, by the individual user:
 
 * Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
 
-* As a user, you create and apply your own {kubernetes} Secrets for your xref:using-git-credentials.adoc[Git credentials store and access token].
+* As a workaround, some users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens].
 
 .Additional resources
 * xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[Administration Guide: OAuth for GitHub, GitLab, or Bitbucket]
-* xref:using-git-credentials.adoc[User Guide: Using Git credentials]
+* xref:using-a-git-provider-access-token.adoc[User Guide: Using a Git-provider access token]
