--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -22,7 +22,10 @@
 ** xref:selecting-an-in-browser-ide-for-one-new-workspace.adoc[]
 ** xref:selecting-an-in-browser-ide-for-all-workspaces-that-clone-the-same-git-repository.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
-** xref:using-git-credentials.adoc[]
+** xref:mounting-secrets.adoc[]
+*** xref:creating-image-pull-secrets.adoc[]
+*** xref:using-a-git-provider-access-token.adoc[]
+** xref:mounting-configmaps.adoc[]
 ** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
 *** xref:enabling-maven-artifact-repositories.adoc[]
 *** xref:enabling-gradle-artifact-repositories.adoc[]
@@ -30,9 +33,6 @@
 *** xref:enabling-python-artifact-repositories.adoc[]
 *** xref:enabling-go-artifact-repositories.adoc[]
 *** xref:enabling-nuget-artifact-repositories.adoc[]
-** xref:creating-image-pull-secrets.adoc[]
-** xref:mounting-secrets.adoc[]
-** xref:mounting-configmaps.adoc[]
 * xref:requesting-persistent-storage-for-workspaces.adoc[]
 * xref:integrating-with-kubernetes.adoc[]
 ** xref:automatic-token-injection.adoc[]
