--- a/modules/end-user-guide/pages/url-parameter-for-additional-remotes.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-additional-remotes.adoc
@@ -18,8 +18,10 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?remotes={{__<name_1>__,__<url_1>
 
 [IMPORTANT]
 ====
-If you do not enter the name `origin` for any of the additional remotes, the remote from __<git_repository_url>__ will be cloned and named `origin` by default, and its expected branch will be checked out automatically.
 
-If you enter the name `origin` for one of the additional remotes, its default branch will be checked out automatically, but the remote from __<git_repository_url>__ will NOT be cloned for the workspace.
+* If you do not enter the name `origin` for any of the additional remotes, the remote from __<git_repository_url>__ will be cloned and named `origin` by default, and its expected branch will be checked out automatically.
+
+* If you enter the name `origin` for one of the additional remotes, its default branch will be checked out automatically, but the remote from __<git_repository_url>__ will NOT be cloned for the workspace.
+
 ====
 
