docs: manage workspaces with kubectl (#2510)
* docs: manage workspaces with kubectl

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Add more clarity to "Creating workspaces" section

Signed-off-by: dkwon17 <dakwon@redhat.com>

* first edit

* first edit

* edits

* edits

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Mario Loriedo <mario.loriedo@gmail.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Mario Loriedo <mario.loriedo@gmail.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Mario Loriedo <mario.loriedo@gmail.com>

* Add new bullet points for benefits of using dashboard

Signed-off-by: David Kwon <dakwon@redhat.com>

* name to lowercase (otherwise the devworkspace cannot be created)

Signed-off-by: David Kwon <dakwon@redhat.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Make bullet concise

Signed-off-by: David Kwon <dakwon@redhat.com>

* Small rearranging

Signed-off-by: David Kwon <dakwon@redhat.com>

* Remove .

Signed-off-by: David Kwon <dakwon@redhat.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/partials/proc_creating-workspaces.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/partials/proc_creatin

--- a/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
+++ b/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
@@ -1,21 +1,22 @@
 :_content-type: ASSEMBLY
-:navtitle: Managing workspaces with OpenShift APIs
-:description: Managing workspaces with OpenShift APIs
+:navtitle: Managing workspaces with {orch-name} APIs
+:description: Managing workspaces with {orch-name} APIs
 :keywords: api, list workspaces, create workspace, restart workspace, stop workspace, start workspace, remove workspace
 // :page-aliases:
 
 [id="managing-workspaces-with-apis"]
-= Managing workspaces with OpenShift APIs
+= Managing workspaces with {orch-name} APIs
 
-...
+On your organization's {orch-name} cluster, {prod-short} workspaces are represented as `DevWorkspace` custom resources of the same name.
+As a result, if there is a workspace named `my-workspace` in the {prod-short} dashboard, there is a corresponding `DevWorkspace` custom resource named `my-workspace` in the user's {orch-namespace} on the cluster.
 
-Consider writing this entire page as a reference. (If so, then rename all the files in `/partials/` and in the `include::` statements below from `proc_` to `ref_`.)
+Because each `DevWorkspace` custom resource on the cluster represents a {prod-short} workspace, you can manage {prod-short} workspaces by using {orch-name} APIs with clients such as the command-line `{orch-cli}`.
+
+Each `DevWorkspace` custom resource contains details derived from the devfile of the Git repository cloned for the workspace. For example, a devfile might provide devfile commands and workspace container configurations.
 
 include::partial$proc_listing-workspaces.adoc[leveloffset=+1]
 
 include::partial$proc_creating-workspaces.adoc[leveloffset=+1]
-
-include::partial$proc_restarting-workspaces.adoc[leveloffset=+1]
 
 include::partial$proc_stopping-workspaces.adoc[leveloffset=+1]
 
