feat: Configure disalbe subdomain isolation
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -36,15 +36,17 @@ metadata:
   annotations:
     che.eclipse.org/oauth-scm-server: github
     che.eclipse.org/scm-server-endpoint: <github_server_url> <2>
+    che.eclipse.org/scm-github-disable-subdomain-isolation: <disable_subdomain_isolation> <3>
 type: Opaque
 data:
-  id: __<Base64_GitHub_OAuth_Client_ID>__ <3>
-  secret: __<Base64_GitHub_OAuth_Client_Secret>__ <4>
+  id: __<Base64_GitHub_OAuth_Client_ID>__ <4>
+  secret: __<Base64_GitHub_OAuth_Client_Secret>__ <5>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> A *GitHub Enterprise Server URL*. By default `https://github.com` is used for the `SAAS` version.
-<3> The Base64-encoded *GitHub OAuth Client ID*.
-<4> The Base64-encoded *GitHub OAuth Client Secret*.
+<3> Disables subdomain isolation, possible values are `"true"` or `"false"`
+<4> The Base64-encoded *GitHub OAuth Client ID*.
+<5> The Base64-encoded *GitHub OAuth Client Secret*.
 
 . Apply the Secret:
 +
