fix: correct the version value in RELEASE.adoc

--- a/RELEASE.adoc
+++ b/RELEASE.adoc
@@ -24,7 +24,7 @@ The publication is decoupled. See link:https://github.com/eclipse-che/che-docs/t
 [source,yaml,subs="+attributes,+quotes"]
 ----
 prerelease: false
-version: stable
+version: __<major>__.__<minor>__.x
 asciidoc:
   attributes:
     prod-ver-patch: "_<major>_._<minor>_.0"
