--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -36,7 +36,7 @@ metadata:
   annotations:
     che.eclipse.org/oauth-scm-server: github
     che.eclipse.org/scm-server-endpoint: <github_server_url> <2>
-    che.eclipse.org/scm-github-disable-subdomain-isolation: <disable_subdomain_isolation> <3>
+    che.eclipse.org/scm-github-disable-subdomain-isolation: "__<true_or_false>__" <3>
 type: Opaque
 data:
   id: __<Base64_GitHub_OAuth_Client_ID>__ <4>
