fix: bitbucket_consumer_key -> bitbucket-consumer-key
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
@@ -54,7 +54,7 @@ openssl rand -base64 24 > bitbucket-shared-secret
 
 . Check the *Create incoming link* checkbox and click *Continue*.
 
-. Paste the content of the `bitbucket_consumer_key` file as the *Consumer Key*.
+. Paste the content of the `bitbucket-consumer-key` file as the *Consumer Key*.
 
 . Enter *{prod-short}* as the *Consumer name*.
 
