--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -15,7 +15,7 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 * The following Base64-encoded files, which were created when setting up the application link, are prepared:
 ** `privatepkcs8-stripped.pem`
-** `bitbucket_consumer_key`
+** `bitbucket-consumer-key`
 ** `bitbucket-shared-secret`
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
@@ -46,7 +46,7 @@ data:
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
 <3> The Base64-encoded content of the `privatepkcs8-stripped.pem` file.
-<4> The Base64-encoded content of the `bitbucket_consumer_key` file.
+<4> The Base64-encoded content of the `bitbucket-consumer-key` file.
 <5> The Base64-encoded content of the `bitbucket-shared-secret` file.
 
 . Apply the Secret:
