core: use che-code/latest as a default editor
Signed-off-by: Valerii Svydenko <vsvydenk@redhat.com>

--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -1,8 +1,12 @@
 :_content-type: SNIPPET
 
 | link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]
-| `che-incubator/che-code/inisiders`
-| This is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
+| 
+* `che-incubator/che-code/latest`
+* `che-incubator/che-code/insiders`
+| 
+* `latest` is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
+* `insiders` is the development version.
 
 | link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community Edition]
 |
