--- a/modules/end-user-guide/pages/customizing-workspace-components.adoc
+++ b/modules/end-user-guide/pages/customizing-workspace-components.adoc
@@ -12,8 +12,8 @@ To customize workspace components:
 
 * xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[Choose a Git repository for your workspace].
 
-* xref:devfile-introduction.adoc[Use a devfile]
+* xref:devfile-introduction.adoc[Use a devfile].
 
-* xref:selecting-a-workspace-ide.adoc[Select and customize your in-browser IDE].
+* xref:cloud-ides-in-workspaces.adoc[Configure a cloud IDE].
 
 * Add {prod-short} specific attributes in addition to the generic devfile specification.
