--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -18,7 +18,7 @@ Set up an application link for OAuth 2.0 on the Bitbucket Server.
 
 . Go to *Administration > Applications > Application links*.
 . Select *Create link*.
-. Select *External application*, and then choose *Incoming* as the direction.
+. Select *External application* and *Incoming*.
 . Enter `pass:c,a,q[{prod-url}]/api/oauth/callback` to the *Redirect URL* field.
 . Chose `Admin - Write`  checkbox in the `Application permissions` section.
 . Click the *Save* button.
