--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -26,7 +26,7 @@ Set up an application link for OAuth 2.0 on the Bitbucket Server.
 +
 [subs="+quotes,+attributes,+macros"]
 ----
-$ echo -n '__<github_oauth_client_id>__' | base64
+$ echo -n '__<Bitbucket_Client_ID>__' | base64
 ----
 
 . Copy the *Client Secret* and encode it to Base64 for use when applying the Bitbucket Server OAuth App Secret:
