--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -33,7 +33,7 @@ $ echo -n '__<Bitbucket_Client_ID>__' | base64
 +
 [subs="+quotes,+attributes,+macros"]
 ----
-$ echo -n '__<github_oauth_client_secret>__' | base64
+$ echo -n '__<Bitbucket_Client_secret>__' | base64
 ----
 
 .Additional resources
